--- a/hackspace.client/shared/data_view/dataview.client.view.html
+++ b/hackspace.client/shared/data_view/dataview.client.view.html
@@ -54,7 +54,7 @@
   </div>
 
   <div class="panel" ng-show="tab === 4">
-    <h3>Status:{{status}}</h3>
+    <h3>Status:{{device_status}}</h3>
 
   </div>
 
