--- a/hackspace.client/index.html
+++ b/hackspace.client/index.html
@@ -37,7 +37,7 @@
     <!-- <script src="bower_components/simpleWeather/jquery.simpleWeather.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/2.6.0/jquery.simpleWeather.min.js"></script>
     <!-- map -->
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <!-- <script src="https://maps.google.com/maps/api/js"></script> -->
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6-1guqbVE7yZwtNTm3b7P96dcqzBCI2M&callback=angular.noop" type="text/javascript"></script> -->
     <script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 
