--- a/hackspace.client/index.html
+++ b/hackspace.client/index.html
@@ -38,7 +38,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.simpleWeather/2.6.0/jquery.simpleWeather.min.js"></script>
     <!-- map -->
     <!-- <script src="https://maps.google.com/maps/api/js"></script> -->
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6-1guqbVE7yZwtNTm3b7P96dcqzBCI2M&callback=angular.noop" type="text/javascript"></script> -->
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6-1guqbVE7yZwtNTm3b7P96dcqzBCI2M" type="text/javascript"></script>
     <script src="/bower_components/ngmap/build/scripts/ng-map.min.js"></script>
 
     <!-- <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script> -->
