fix map, remove forecast

--- a/hackspace.client/index.html
+++ b/hackspace.client/index.html
@@ -80,8 +80,8 @@
           <div class="mastfoot">
             <div class="inner">
               <p>
-                Created by:
-                <a href="https://github.com/CarlXue">@Song</a>
+                Author:
+                <a href="https://github.com/tingxuanz" target="_blank">@Tingxuan Zhang</a>
               </p>
             </div>
           </div>
