--- a/hackspace.client/shared/data_view/dataview.client.view.html
+++ b/hackspace.client/shared/data_view/dataview.client.view.html
@@ -7,13 +7,13 @@
   <section ng-init="tab = 1" style="margin-bottom: 2em;">
     <ul class="nav nav-pills center">
       <li class="dataview-toggle" ng-class="{ active:tab === 1 }">
-        <a href ng-click="tab = 1">Chart</a>
+        <a href ng-click="tab = 1">Location</a>
       </li>
       <li class="dataview-toggle" ng-class="{ active:tab === 2 }">
         <a href ng-click="tab = 2">Table</a>
       </li>
       <li class="dataview-toggle" ng-class="{ active:tab === 3 }">
-        <a href ng-click="tab = 3">Map</a>
+        <a href ng-click="tab = 3">Chart</a>
       </li>
       <li class="dataview-toggle" ng-class="{ active:tab === 4 }">
         <a href ng-click="tab = 4">Status</a>
@@ -22,11 +22,10 @@
   </section>
 
   <div class="panel" ng-show="tab === 1">
-    <div ng-repeat="label in attributes" ng-if="label !== 'createdAt'">
-      <!--Chart here-->
-      <h4 class="device_heading">{{label}}</h4>
-      <canvas id="dataChart{{$index}}" width="600" height="400"></canvas>
-    </div>
+    <ng-map center="-37.799080,144.963115" zoom="16">
+      <marker position="-37.799080,144.963115" title="Hello World!"></marker>
+    </ng-map>
+    <br>
   </div>
 
   <div class="panel" ng-show="tab === 2">
@@ -43,32 +42,37 @@
         </tr>
       </tbody>
     </table>
+    <br>
   </div>
 
   <div class="panel" ng-show="tab === 3">
-    <div map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl}}">
-      <ng-map center="-37.799080,144.963115" zoom="16">
-        <marker position="-37.799080,144.963115" title="Hello World!"></marker>
-      </ng-map>
+    <div ng-repeat="label in attributes" ng-if="label !== 'createdAt'">
+      <!--Chart here-->
+      <h4 class="device_heading">{{label}}</h4>
+      <canvas id="dataChart{{$index}}" width="600" height="400"></canvas>
     </div>
+    <br>
   </div>
+
+
 
   <div class="panel" ng-show="tab === 4">
     <h3>Status:{{device_status}}</h3>
-
+    <br>
   </div>
+
 
 
 
   <h4>Weather: {{device_location}}</h4>
   <h5 style="margin-top: 1em;"><span style="float: left;">Condition: {{weather}}</span> <span style="float: right">Current temperature: {{currentTemp}} &#8451</span></h5>
-  <br><br>
-  <h4>Weather forecast</h4>
+  
+  <!-- <h4>Weather forecast</h4>
   <div ng-repeat="obj in forecast" style="float: left; margin-left: 5px; margin-right: 5px;">
     <p class="weather_forecast">{{obj.timestamp}}</p>
     <p class="weather_forecast">{{obj.forecastWeather}}</p>
     <p class="weather_forecast">{{obj.forecastTemp}}&#8451</p>
-  </div>
+  </div> -->
 
 
 
