update map and status

--- a/hackspace.client/index.html
+++ b/hackspace.client/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/sass/style.css" type="text/css">
     <!--<link rel="stylesheet" href="../assets/css/radio.css" type="text/css">-->
     <link rel="stylesheet" href="assets/css/weather.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/bin-icon.css" type="text/css">
     <!-- request google font api -->
     <link href='https://fonts.googleapis.com/css?family=Exo:700,400italic,900' rel='stylesheet' type='text/css'>
     <!-- map css -->
