--- a/hackspace.client/shared/data_view/dataview.client.view.html
+++ b/hackspace.client/shared/data_view/dataview.client.view.html
@@ -23,7 +23,13 @@
 
   <div class="panel" ng-show="tab === 1">
     <ng-map center="-37.799080,144.963115" zoom="16">
-      <marker position="-37.799080,144.963115" title="Hello World!"></marker>
+      
+      <custom-marker id="bin" position="-37.799080,144.963115">
+        <div>
+          <h4 style="color: black">{{device_status * 100 + "%"}}</h3>
+          <img src="../assets/img/bin-icon.png" />
+        </div>
+        </custom-marker>
     </ng-map>
     <br>
   </div>
@@ -56,7 +62,14 @@
 
 
 
-  <div class="panel" ng-show="tab === 4">
+  <div class="panel text-center" ng-show="tab === 4">
+    <div class="icon-trash">
+      <div class="trash-lid" ng-style="bin_style"></div>
+      <div id="bin-container"class="trash-container" ng-style="bin_style"></div>
+      <div class="trash-line-1"></div>
+      <div class="trash-line-2"></div>
+      <div class="trash-line-3"></div>
+    </div>
     <h3>Status:{{device_status}}</h3>
     <br>
   </div>
@@ -66,7 +79,7 @@
 
   <h4>Weather: {{device_location}}</h4>
   <h5 style="margin-top: 1em;"><span style="float: left;">Condition: {{weather}}</span> <span style="float: right">Current temperature: {{currentTemp}} &#8451</span></h5>
-  
+
   <!-- <h4>Weather forecast</h4>
   <div ng-repeat="obj in forecast" style="float: left; margin-left: 5px; margin-right: 5px;">
     <p class="weather_forecast">{{obj.timestamp}}</p>
