test Twitter post

--- a/hackspace.client/shared/management_page/dataManage.client.view.html
+++ b/hackspace.client/shared/management_page/dataManage.client.view.html
@@ -31,13 +31,13 @@
       <select id="preconfigActions" ng-options="type as type.text for type in types.cast " ng-model="selectedAction" ng-change="update()" class="col-md-4">
       </select>
     </div>
-    <h3 class="device_heading" style="margin-top: 1em; width: 100%; text-align: left;">AT</h3>
+    <!-- <h3 class="device_heading" style="margin-top: 1em; width: 100%; text-align: left;">AT</h3>
 
     <label for="dateSelect" class="sr-only">Date:</label>
     <select name="dateSelect" id="dateSelect" class="col-md-4" ng-options="option.name for option in date.availableOptions track by option.id" ng-model="date.selectedOption" required></select>
 
     <label for="timeSelect" class="sr-only">Time:</label>
-    <select name="timeSelect" id="timeSelect" class="col-md-4" style="margin-left: 2em;" ng-options="option.name for option in time.availableOptions track by option.id" ng-model="time.selectedOption" required></select>
+    <select name="timeSelect" id="timeSelect" class="col-md-4" style="margin-left: 2em;" ng-options="option.name for option in time.availableOptions track by option.id" ng-model="time.selectedOption" required></select> -->
     <div style="width: 100%; float: left;" class="row"><button class="btn btn-lg btn-primary btn-theme" style="margin-top: 1em;" type="submit">Hack it!</button></div>
 
   </form>
